j--/tests/pass/UPlus.java
// UPlus.java is used to modelize the unary plus operator
// Authors : Creciun Eduard, Lambert Andrew

package pass;

public class UPlus
{
	public int uPlus(int x){
		return +x;
	}
}