j--/tests/fail/UPlus.java
// Unary Plus fail test
// Authors : Creciun Eduard, Lambert Andrew

package fail;

import java.lang.System;

public class UPlus
{
	public static void main(String [] args)
	{
		System.out.println(+'a');
	}
}